# wasm-simulator-fork

./: .gitignore  Cargo.toml  LICENSE  README.md  script.sh
algorithims/fifo/: Cargo.toml
algorithims/fifo/src/: lib.rs
algorithms/fifo/: Cargo.toml
algorithms/fifo/src/: lib.rs
algorithms/gdsize/: Cargo.toml
algorithms/gdsize/src/: lib.rs
algorithms/lfu/: Cargo.toml
algorithms/lfu/src/: lib.rs
algorithms/lru/: Cargo.toml
algorithms/lru/src/: lib.rs
benchmark/: Cargo.toml  build.rs
benchmark/src/: bincode_test.rs  bytemuck_test.rs  main.rs  native_test.rs  pair_test.rs  self_ref_test.rs
benchmark_modules/bincode_addition/: Cargo.toml
benchmark_modules/bytemuck_addition/: Cargo.toml
benchmark_modules/bytemuck_addition/src/: lib.rs
benchmark_modules/bytemuck_addition_fixed/: Cargo.toml
benchmark_modules/bytemuck_addition_fixed/src/: lib.rs
benchmark_modules/testModule/: Cargo.toml
benchmark_modules/testModule/src/: lib.rs
benchmark_shared_data_structures/: Cargo.toml
benchmark_shared_data_structures/src/: lib.rs
loop_test_module/: Cargo.toml
loop_test_module/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
shared_crates/algorithm/: Cargo.toml
shared_crates/algorithm/src/: lib.rs
shared_crates/packed_i32/: Cargo.toml
shared_crates/packed_i32/src/: lib.rs
sim_modules/native/native_fifo/: Cargo.toml
sim_modules/wasm/wasm_fifo/: Cargo.toml
sim_modules/wasm_bincode/wasm_bincode_fifo/: Cargo.toml
sim_modules/wasm_bincode/wasm_bincode_fifo/src/: lib.rs
sim_modules/wasm_bincode/wasm_bincode_gdsize/: Cargo.toml
sim_modules/wasm_bincode/wasm_bincode_gdsize/src/: lib.rs
sim_modules/wasm_bincode/wasm_bincode_lfu/: Cargo.toml
sim_modules/wasm_bincode/wasm_bincode_lfu/src/: lib.rs
sim_modules/wasm_bincode/wasm_bincode_lru/: Cargo.toml
sim_modules/wasm_bincode/wasm_bincode_lru/src/: lib.rs
sim_modules/wasm_c_struct/wasm_c_fifo/: Cargo.toml
sim_modules/wasm_c_struct/wasm_c_gdsize/: Cargo.toml
sim_modules/wasm_c_struct/wasm_c_gdsize/src/: lib.rs
sim_modules/wasm_c_struct/wasm_c_lfu/: Cargo.toml
sim_modules/wasm_c_struct/wasm_c_lfu/src/: lib.rs
sim_modules/wasm_c_struct/wasm_c_lru/: Cargo.toml
sim_modules/wasm_c_struct/wasm_c_lru/src/: lib.rs
sim_modules/wasm_pair/wasm_pair_fifo/: Cargo.toml
sim_modules/wasm_pair/wasm_pair_fifo/src/: lib.rs
sim_modules/wasm_pair/wasm_pair_gdsize/: Cargo.toml
sim_modules/wasm_pair/wasm_pair_gdsize/src/: lib.rs
sim_modules/wasm_pair/wasm_pair_lfu/: Cargo.toml
sim_modules/wasm_pair/wasm_pair_lfu/src/: lib.rs
sim_modules/wasm_pair/wasm_pair_lru/: Cargo.toml
sim_modules/wasm_pair/wasm_pair_lru/src/: lib.rs
simulator/: Cargo.toml  build.rs
simulator/src/: cached_policy.rs  main.rs  native_modules.rs  policy.rs
simulator_shared_types/: Cargo.toml
simulator_shared_types/src/: lib.rs
struct_addition/: Cargo.toml
struct_addition/src/: lib.rs
testModule/: Cargo.toml
testModule/src/: lib.rs
