[workspace]

members = [
    "benchmark",
    "runtime",
    "simulator",
    "benchmark_modules/testModule",
    "benchmark_modules/loop_test_module",
    "benchmark_modules/bincode_addition",
    "benchmark_modules/bytemuck_addition",
    "benchmark_shared_data_structures",
    "shared_crates/packed_i32",
    "shared_crates/algorithm",
    "simulator_shared_types",
    "algorithms/fifo",
    "algorithms/gdsize",
    "algorithms/lfu",
    "algorithms/lru",
    "sim_modules/wasm_bincode/wasm_bincode_fifo",
    "sim_modules/wasm_bincode/wasm_bincode_gdsize",
    "sim_modules/wasm_bincode/wasm_bincode_lfu",
    "sim_modules/wasm_bincode/wasm_bincode_lru",
    "sim_modules/wasm_c_struct/wasm_c_fifo",
    "sim_modules/wasm_pair/wasm_pair_fifo",
    "sim_modules/wasm_pair/wasm_pair_gdsize",
    "sim_modules/wasm_pair/wasm_pair_lfu",
    "sim_modules/wasm_pair/wasm_pair_lru",
]