[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../runtime"}
benchmark_shared_data_structures = { path = "../benchmark_shared_data_structures"}
wasmer = "2.0.0"
bincode = "1.3.3"
bytemuck = "1.7.2"
packed_i32 = {path = "../shared_crates/packed_i32"}
ouroboros = "0.13.0"