[package]
name = "runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = {version = "2.1", default-features = false}
bincode = "1.3.3"
serde = {version = "1.0.130", features = ["derive"] }
bytemuck = "1.7.2"
