[package]
name = "simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../runtime"}
flate2 = "1.0"
clap = "2.33.3"
wasmer = "2.0.0"
bincode = "1.3.3"
packed_i32 = {path = "../shared_crates/packed_i32" }
simulator_shared_types = {path = "../simulator_shared_types"}
fifo = {path = "../algorithims/fifo"}