[package]
name = "lfu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulator_shared_types = {path = "../../simulator_shared_types"}
algorithm = {path = "../../shared_crates/algorithm"}
priority-queue = "1.2.0"