[package]
name = "wasm_c_lfu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
lfu = {path = "../../../algorithms/lfu" }
packed_i32 = {path = "../../../shared_crates/packed_i32" }
simulator_shared_types = {path = "../../../simulator_shared_types"}
algorithm = {path = "../../../shared_crates/algorithm"}
bytemuck = "1.7.2"
once_cell = "1.8.0"